<resources>
    <string name="app_name">My Album Collection</string>
    <string name="placeholer">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget placerat diam. Ut mattis fringilla facilisis. Donec non est ipsum.</string>
    <string name="placeholder_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempus tristique lectus a porta. Duis suscipit sapien vel orci finibus, vestibulum tristique nibh cursus. Sed eleifend felis nibh, sed hendrerit justo sagittis quis. Vestibulum sollicitudin, justo at tristique congue, diam quam ornare tortor, ac molestie massa quam et enim. Aliquam efficitur imperdiet neque, in fringilla tellus bibendum vel. Donec volutpat aliquet augue. Duis eros urna, tempus sed finibus in, euismod vitae purus. Aliquam eleifend venenatis nunc, sed maximus sapien dictum sed. Suspendisse leo est, fermentum sit amet tortor vel, condimentum lobortis eros. Duis libero nisl, consectetur posuere eleifend ac, consequat vel justo. Praesent eu feugiat tortor. Vestibulum aliquet justo nunc, id hendrerit dolor feugiat vel. Sed et magna rutrum, volutpat augue et, imperdiet sapien. Etiam dignissim mi quis orci facilisis, at varius erat efficitur. Cras quis enim vitae sem rutrum malesuada.\n\nDonec vitae mauris lobortis, feugiat risus ac, laoreet nibh. Fusce sagittis tincidunt nibh, ac convallis arcu semper sed. Nulla facilisi. Nulla auctor pretium facilisis. Pellentesque mollis in lectus non pharetra. Proin convallis enim non fermentum placerat. Nunc vel magna vel nisl lobortis ultricies eget sed ex. In id pharetra erat. Duis fringilla, justo id hendrerit finibus, nisi lorem laoreet dolor, vitae ornare tortor sapien quis lacus. Nullam fringilla eget metus quis iaculis. Etiam posuere et ligula vel mollis. Phasellus blandit sem eget consectetur viverra.</string>
    <string name="albums_name">Nama Album</string>
    <string name="description">Deskripsi</string>
    <string name="track_list">Track List</string>
    <string name="artist_info">Artist Info</string>
    <string name="artist_name">Nama Artist</string>
    <string name="about">About Page</string>
    <string name="myName">Nabil Falih Khairullah</string>
    <string name="myEmail">falih.khairullah@gmail.com</string>
    <string-array name="data_name">
        <item>Elephant Gym - Dreams</item>
        <item>John OFA Rhee - bleeding in sunset blvd.</item>
        <item>Wave to Earth - Summer flows 0.02</item>
        <item>DDBY - Cafe de Touhou</item>
        <item>ZUTOMAYO - Jinkougaku</item>
        <item>The All-American Rejects - Move Along</item>
        <item>Masego - Lady Lady</item>
        <item>Frank Ocean - Blonde</item>
        <item>Anderson .Paak - Malibu</item>
        <item>Masayoshi Takanaka - Brazillian Skies</item>
        <item>Ryuichi Sakamoto - 12</item>
    </string-array>
    <string-array name="data_description">
        <item>A mysterious object is revealed; the drum sound of the rite arouses; flares are blazing; the soul slides through water’s surface; the breath lights up the air; the body as a sacrifice, I hear myself, in this dream.\n\n The 12 songs that constitute Dreams, the third full-length from the Taiwanese trio Elephant Gym, explore the deep spacetime continuum that consciousness cannot capture. Beyond the trio’s staple instrumentation of guitar, bass, and drumset, Dreams blends in wind instruments, traditional drums, and Taiwanese narrative. Through collaboration with Hakka singer-songwriter Lin Sheng Xiang and pop musician 9m88, notable for their accomplishments in jazz, soul, and R&amp;B, Dreams is a sweeping narrative about a fantastical dream that crosses the boundary. After pressing play, please do close your eyes, and enjoy the dream.</item>
        <item>John’s album [ bleeding in sunset blvd. ] invites listeners to share in the last two years of his intimate journey. Having spent most of his early adulthood in Seoul, John sought inspiration and headed back home to Los Angeles to work on his next studio album.</item>
        <item>the sea speaks in waves\n\nWhen he\'s in a good mood and when he\'s angry,\nWhen we are depressed, we learn before we are born.\nin shape similar to his mind or speech\nWe move slowly through life and repeat stopping.\nIf that state persists, you are already in the middle of nowhere, or\nAlas, it tends to sink deep into the bottom.\nLoneliness becomes the default and fills your lungs\n\nTo get from the bottom to the surface\nTo flow from the center to the edge and face each other\nswimming hard\nborn of water to land\nTo meet you on the shore and jump together again\n\'Cause we\'re dying even when we don\'t intend to die\nlove to die\n\n\'It is love that gently sustains us so that we do not fail to jump with the flow\'\n\nHow many bubbles had to be made to reach love\nSurrendering oneself to the swaying mind\nwant it or not\nIn fact, there is no need for bravery or bravery here.\nIf you just hold your breath and love me\nI\'m sure you\'ll get to where you want to be\n\nI don\'t know if that\'s why, but Wave Tours\nEven if I swim like crazy on the summer sea\nI\'m just dancing with a shameless face\nI don\'t have much time, but it\'s okay\nSaid I\'d give you all seasons and reasons\nWith his salty body, he pushes us to the beach for a while.\n\nIf you listen to all their waves\nit\'s love\n</item>
        <item>Feel like a cafe while relaxing at home . A total of 11 tracks/approximately 47 minutes arranged from the songs of "Touhou Youyoumu" in the image of an airport cafe lounge .\n\nContains many warm songs centered around acoustic tones.\n\nPlease enjoy while drinking coffee.</item>
        <item>The 3rd Full ALBUM "沈香学" (reading: Jinkougaku), the first album in about two and a half years\n\nIncluding "Time Left", the ending theme song for the anime "Chainsaw Man", the 2022 Spotify Holiday TVCM song "Kira Killer (feat. Mori Calliope)", and songs such as "Inside Joke" and "Mirror Tune", which are also representative songs in live performances, 13 songs in total.</item>
        <item>"Move Along" is the second studio album from The All-American Rejects. Featuring hits like the title track, "It Ends Tonight," and "Dirty Little Secret," this was the album that propelled the band into becoming a household name, achieving RIAA-certified double platinum status, and packing out arenas at the height of a three-year tour cycle that rarely took a break.\n\n15+ years later, Dark Operative is grateful to be keeping this album in print for all listeners, whether they just got into the band or have been there since day one.</item>
        <item>Lady Lady is the debut studio album by Jamaican-American singer Masego. Pitchfork gave the album a 7.3 out of 10 saying, "His music is sophisticated, steeped in 1980s quiet-storm R&amp;B with hints of smooth jazz along the fringes," and "Lady Lady is a grand coming-of-age record that displays the playful and reflective halves of Masego, illuminating his versatile nature with the promise of more to come."</item>
        <item>The album is titled Blonde (stylised as Blond) by African American artist Frank Ocean, released in 2016 by Blonded (Beats 1 radio show and label company, conducted by Ocean).\n\nThe album was issued in two different versions: the physical version in magazines (like Boys Don’t Cry, Ocean’s zine magazine) given away in pop-up stores around the country; and the digital one on iTunes (which is the version in review).\n\nIn this project, he exhibits all his vulnerability through true life episodes and pop culture references, addressing various topics such as love, relationships, their repercussions and posthumous learning, self-esteem/hatred, drug addiction, mortality/immortality, mental health and depression, creating a deeply personal work, which for one reason or another, makes us feel what he experienced such is the rawness of it.</item>
        <item>This is a vinyl LP pressing of Malibu (2017 EU Reissue) by Anderson Paak. The American rapper originally released their second studio album on January 15, 2016, via ArtClub International. The album is described as the beginning of his potential commercial breakthrough, following his prominent role in Dr. Dre\'s album Compton (2015). Malibu received a Grammy nomination for Best Urban Contemporary Album.</item>
        <item>Brasilian Skies is the fourth studio album by Japanese jazz fusion guitarist Masayoshi Takanaka, released via Kitty Records on July 21, 1978. The album includes several songs recorded in Brazil with Brazilian musicians. Notable tracks on the record include, “Star Wars Samba”, a samba arrangement of Star Wars and the fan-favorite “Disco B”. Haruko Kuwana, Ryuichi Sakamoto, Jeff Porcaro (TOTO) and Paulinho da Costa are among the many participants on the album.</item>
        <item>Milan Records is proud to release “12,” an intimate collection of twelve compositions by Ryuichi Sakamoto, written and recorded in Tokyo during his fight with cancer throughout 2021-2022. Each numbered title refers to its recording date. About the album, Sakamoto says: ”….after I finally “came home” to my new temporary housing after a big operation, I found myself reaching for the synthesizer. I had no intention of composing something; I just wanted to be showered in sound. I’ll probably continue to keep this kind of “diary.”</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://s9.limitedrun.com/images/1570683/v600_____-__-1000x1000.jpg</item>
        <item>https://contents.sixshop.com/thumbnails/uploadedFiles/152619/product/image_1625634921269_2500.jpg</item>
        <item>https://i.scdn.co/image/ab67616d0000b273c091fe6573f073f2e31b249f</item>
        <item>https://ddby.jp/wp-content/uploads/2022/01/cafe_01_560_420.jpg</item>
        <item>https://reni-ec-pro.s3-ap-northeast-1.amazonaws.com/product/UPCH-20651/a46cc47973e969cb8d80e6dd3286c0d3ecb723e807bd4a5cba3c5d6bd32a4244.jpg?1693989785</item>
        <item>https://f4.bcbits.com/img/a3534454098_16.jpg</item>
        <item>https://is1-ssl.mzstatic.com/image/thumb/Music125/v4/35/48/b3/3548b3c7-92bd-ea54-1e09-47a1f6f25b01/00842812109249.rgb.jpg/1200x1200bf-60.jpg</item>
        <item>https://miro.medium.com/v2/resize:fit:4800/format:webp/1*6fATia_4ODR-7P3VEGofYA.jpeg</item>
        <item>https://cdn.shopify.com/s/files/1/0117/8740/3323/files/products_2FFLS-VINH-BD-0885150342237_2FFLS-VINH-BD-0885150342237_1682497669770.jpg?v=1692070893</item>
        <item>https://light-in-the-attic.s3.amazonaws.com/uploads/release_image/30837/image/large_550_tmp_2F1666817952140-ivyjsx67z0c-a8f355977133f7e724d2e61be9587451_2F_C3_AC_C3_A9_C3_86_C3_A5_C3_89_E2_94_82_C3_AF_60500image0.jpg</item>
        <item>https://m.media-amazon.com/images/I/71unPscLQtL._SY355_.jpg</item>
    </string-array>
</resources>