<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        style="@style/TextContent.TitleMedium.Bold.Blue"
        android:id="@+id/text_artist"
        android:text="@string/artist_info"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_artist"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@id/text_artist"/>

    <TextView
        style="@style/TextContent.TitleMedium.Bold.Yellow"
        android:id="@+id/text_name"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/artist_name"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/image_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_artist"
        app:layout_constraintTop_toTopOf="@+id/image_artist"/>

    <TextView
        style="@style/TextContent.BodyMedium.Gray"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="45dp"
        android:id="@+id/text_desc"
        tools:text= "@string/placeholer"
        app:layout_constraintTop_toBottomOf="@id/image_artist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>