<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">



        <TextView
            style="@style/TextContent.HeadlineMedium.Bold"
            android:id="@+id/about"
            android:text="@string/about"
            android:background="@color/tosca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/image_profile"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/profpict"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about"/>

        <TextView
            style="@style/TextContent.HeadlineMedium.Bold"
            android:id="@+id/myName"
            android:text="@string/myName"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextContent.HeadlineMedium"
            android:id="@+id/myEmail"
            android:text="@string/myEmail"
            android:background="@color/blue"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/myName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>